implemented BookController tests